syntax = "proto3";

package payment;

import "google/api/annotations.proto";

option go_package = "onboardingservice/payment/v1;v1";

service PaymentService {
  rpc InitiateDeposit(InitiateDepositRequest) returns (InitiateDepositResponse);
  rpc Subscribe(SubscribeRequest) returns (SubscribeResponse) {
    option (google.api.http) = {
      post: "/v1/payment/subscribe"
      body: "*"
    };
  }
}

message InitiateDepositRequest {
  string user_id = 1;
  double amount = 2; // Сумма в USDT
}

message InitiateDepositResponse {
  string transaction_id = 1; // ID созданной транзакции
  string status = 2;         // Статус транзакции (pending, completed, failed)
}

message SubscribeRequest {
  string user_id = 1;
  string plan_id = 2;
  int32 total_rooms = 3;
}

message SubscribeResponse {
  string order_id = 1;
  string status = 2;
  float amount = 3;
}
